--- a/src/views/partials/title.ejs
+++ b/src/views/partials/title.ejs
@@ -1,4 +1,4 @@
 <a class="nav-item is-brand is-active title is-5" href="/">
-    <img class="image 32x32" src="https://images-ext-1.discordapp.net/external/f9JFLQ8Wq2ue4aTtxB9voh0XrtJFfdrTLgUJlShyUrY/https/cdn.discordapp.com/icons/194533269180514305/7e12fb0d80893de9898cb9174835b357.jpg?width=89&height=89" style="border-radius: 100%;">
+    <img class="image 32x32" src="/img/logo.png" style="border-radius: 100%;">
     &nbsp;&nbsp;<strong>SSL - Staff Applications</strong>
 </a>
